Package: R.filesets
===================

Version: 1.5.3 [2012-11-13]
o CLEANUP: Deprecated (get|set)Label() for GenericDataFile.


Version: 1.5.2 [2012-11-12]
o CLEANUP: Now seq_along(x) instead of seq(along=x) everywhere.
  Similarly, seq(ds) where 'ds' is GenericDataFileSet is now
  replaced by seq_along(ds).  Likewise, seq_len(x) replaces 
  seq(length=x), and length(ds) replaces nbrOfFiles(ds).


Version: 1.5.1 [2012-11-08]
o Now TabularTextFile() tries to infer whether the data section
  contains column names or not.  This is done by comparing to
  the optional 'columnNames' header argument.  If that is not
  available, it will (as before) assume there are column names.
o Now readDataFrame() acknowledge header comment arguments 
  'columnNames' and 'columnClasses' if specified in the file.
o Now getDefaultColumnNames() for TabularTextFile falls back to 
  header comment argument 'columnNames', if there are no column
  names in the actual data table.
o Now readRawHeader() for TabularTextFile also parses and returns
  header comment arguments.


Version: 1.5.0 [2012-11-02]
o Added ColumnNamesInterface which GenericTabularFile now implements.
  Classes inheriting from GenericTabularFile should rename any
  getColumnNames() method to getDefaultColumnNames().
o CLEANUP: Replaced all whichVector() with which(), because the
  latter is now the fastest again.


Version: 1.4.2 [2012-11-01]
o Added setColumnNames() for GenericTabularFile, which utilizes
  setColumnNamesTranslator().
o CLEANUP: Deprecated (get|set)ColumnNameTranslator() in favor of
  (get|set)ColumnNamesTranslator(); note the plural form.


Version: 1.4.1 [2012-10-31]
o CLEANUP: readDataFrame() for TabularTextFile no longer returns
  attribute 'fileHeader', unless argument 'debug' is TRUE.


Version: 1.4.0 [2012-10-30]
o Added validate() to GenericDataFileSet, which iteratively calls
  validate() on all the GenericDataFile:s in the set.  The default