@@ -2,7 +2,10 @@ Package: R.filesets
 ===================
 
 Version: 1.5.3 [2012-11-13]
-o CLEANUP: Deprecated (get|set)Label() for GenericDataFile.
+o CLEANUP: Deprecated (get|set)Label() for GenericDataFile and
+  (get|set)Alias() for GenericData(File|FileSet).  Related
+  arguments such at 'alias' to GenericDataFileSet and 'aliased'
+  to getDefaultFullName() for GenericDataFile are also deprecated.
 
 
 Version: 1.5.2 [2012-11-12]
